--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <title>page-scroll 使用</title>
+  <style>
+  body {
+    height: 2000px;
+  }
+  </style>
   <link rel="stylesheet" href="page-scroll.css">
 </head>
 <body>
@@ -18,5 +23,9 @@
     </li>
   </ul>
 
+<script src="page-scroll.js"></script>
+<script>
+  pageScroll.init();
+</script>
 </body>
 </html>
