--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 </head>
 <body>
 
-  <ul class="page-scroll">
+  <div class="page-scroll-container"></div>
+<!--   <ul class="page-scroll">
     <li class="to-top">
       <a class="iconfont icon-to-top" href="#">&#xe601;</a>
       <div class="info">返回顶部</div>
@@ -21,11 +22,13 @@
       <a class="iconfont icon-to-bottom" href="#">&#xe600;</a>
       <div class="info">返回底部</div>
     </li>
-  </ul>
+  </ul> -->
 
 <script src="page-scroll.js"></script>
 <script>
-  pageScroll.init();
+  pageScroll.init({
+    container: '.page-scroll-container'
+  });
 </script>
 </body>
 </html>
