remove debug code

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 <body>
 
   <div class="page-scroll-container"></div>
-<!--   <ul class="page-scroll">
+
+<!--   page-scroll HTML结构
+<ul class="page-scroll">
     <li class="to-top">
       <a class="iconfont icon-to-top" href="#">&#xe601;</a>
       <div class="info">返回顶部</div>
@@ -22,7 +24,8 @@
       <a class="iconfont icon-to-bottom" href="#">&#xe600;</a>
       <div class="info">返回底部</div>
     </li>
-  </ul> -->
+  </ul>
+-->
 
 <script src="page-scroll.js"></script>
 <script>
